crates/ic-ptree/defs/cidl/ptree_builder.h

struct ptree*
create_valuetype_start(struct identifier ident, struct ptree* parent, struct ptree* interface);
struct ptree* create_valuetype_finish(struct ptree* members, struct position pos_end);
struct ptree*
create_valuetype_factory(struct identifier ident, struct ptree* params, struct declarator* raises);
struct ptree* create_valuetype_factory_param(struct declarator* decl, struct ptree* type);
struct ptree*
create_valuetype_member(struct declarator* declarators, struct ptree* type, int is_public);
struct declarator* append_array_size(struct declarator* decl, const struct numeric* value);
struct declarator* set_array_bounds(struct declarator* decl, struct declarator* bounds);
struct identifier create_anon_name(void);
void validate_tree(struct ptree* node);
void format_doxy_comments(struct ptree* tree);
struct ptree* try_lookup_node(const char* name, const enum node_kind kind[]);
struct ptree* create_node(enum node_kind kind, struct identifier ident);
struct ptree* create_doc(struct identifier ident, int post_comment);
INTERCOM_PUBLIC struct ptree* merge_members(struct ptree* node, struct ptree* members);