crates/ic-ptree/defs/cidl/constants.h

struct numeric;
enum node_kind {
    N_UNDEF,
    N_INCLUDE,    // An include statement
    N_PRIMITIVE,  // A primitive type (long, octet, ... )
    N_NATIVE,     // A node with type "native" in IDL

    N_MODULE,     // A module (namespace)
    N_STRUCT,     // A struct type or a struct declaration
    N_UNION,      // A union type or a union declaration
    N_VALUETYPE,  // A valuetype or a valuetype declaration
    N_INTERFACE,  // An interface
    N_EXCEPTION,  // An exception definition
    N_ENUM,       // An enum type
    N_BITSET,     // A bitset type
    N_BITMASK,    // A bitmask type or an enum annotated with @bitset

    N_CASE,       // A case value inside a union
    N_NULL,       // An explicit null node
    N_MEMBER,     // A member variable in a module, enum, bitset, bitmask, struct, union or valuetype
    N_PROTOTYPE,  // A function prototype inside an interface

    N_SEQUENCE,  // A sequence, possibly bounded
    N_MAP,       // A map, possibly bounded
    N_ARRAY,     // An N-dimensional array
    N_STRING,    // A string, possibly bounded
    N_FIXED,     // A fixed type
    N_ALIAS,     // A type alias (typedef)
    N_CONST,     // A constant value

    N_ANNOTATION_DEF,  // An annotation definition
    N_ANNOTATION       // An annotation application
};
struct position {
    int line;
    int column;
};
struct identifier {
    const char* name;
    struct position pos;
};
struct ptree;