crates/ic-ptree/src/ptree.rs

extern "C" {
    pub fn create_valuetype_start(
        ident: identifier,
        parent: *mut ptree,
        interface: *mut ptree,
    ) -> *mut ptree;
}
extern "C" {
    pub fn create_valuetype_finish(members: *mut ptree, pos_end: position) -> *mut ptree;
}
extern "C" {
    pub fn create_valuetype_factory(
        ident: identifier,
        params: *mut ptree,
        raises: *mut declarator,
    ) -> *mut ptree;
}
extern "C" {
    pub fn create_valuetype_factory_param(decl: *mut declarator, type_: *mut ptree) -> *mut ptree;
}
extern "C" {
    pub fn create_valuetype_member(
        declarators: *mut declarator,
        type_: *mut ptree,
        is_public: ::std::os::raw::c_int,
    ) -> *mut ptree;
}
extern "C" {
    pub fn append_array_size(decl: *mut declarator, value: *const numeric) -> *mut declarator;
}
extern "C" {
    pub fn set_array_bounds(decl: *mut declarator, bounds: *mut declarator) -> *mut declarator;
}
extern "C" {
    pub fn create_anon_name() -> identifier;
}
extern "C" {
    pub fn validate_tree(node: *mut ptree);
}
extern "C" {
    pub fn format_doxy_comments(tree: *mut ptree);
}
extern "C" {
    pub fn try_lookup_node(
        name: *const ::std::os::raw::c_char,
        kind: *const node_kind,
    ) -> *mut ptree;
}
extern "C" {
    pub fn create_node(kind: node_kind, ident: identifier) -> *mut ptree;
}
extern "C" {
    pub fn create_doc(ident: identifier, post_comment: ::std::os::raw::c_int) -> *mut ptree;
}
extern "C" {
    pub fn merge_members(node: *mut ptree, members: *mut ptree) -> *mut ptree;
}
